changed origin in Socket Io Server And Made Some Changes in Routes

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 CONNECTION_STR=""
 NEXTAUTH_SECRET=""
-NEXT_PUBLIC_SOCKETIO_URL=""
+NEXT_PUBLIC_SOCKETIO_URL="http://localhost:4000/"
 PORT=4000
+CLIENT_UR=""
