added Profile image Functionality

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,12 @@ NEXTAUTH_SECRET=""
 NEXT_PUBLIC_SOCKETIO_URL="http://localhost:4000/"
 PORT=4000
 CLIENT_UR=""
+
+# firebase Functionality
+NEXT_PUBLIC_API_KEY=""
+NEXT_PUBLIC_AUTH_DOMAIN=""
+NEXT_PUBLIC_PROJECT_ID=
+NEXT_PUBLIC_STORAGE_BUCKET=""
+NEXT_PUBLIC_MESSAGINGSENDER_ID=""
+NEXT_PUBLIC_APP_ID=""
+NEXT_PUBLIC_MEASUREMENT_ID=""
